# simple_logger

./: CMakeLists.txt  Logger.hpp  core.hpp  main.cpp
